--- a/src/main/java/com/mycompany/gatuslaostudentsapp/StudentManagementForm.form
+++ b/src/main/java/com/mycompany/gatuslaostudentsapp/StudentManagementForm.form
@@ -125,6 +125,7 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtSearchActionPerformed"/>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtSearchKeyTyped"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnSearch">
